Corrigindo versão do electron-builder

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "firebase": "^11.8.1",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
-    "next": "15.2.3",
+    "next": "^15.3.4",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -87,7 +87,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "electron-builder": "^24.14.1",
+    "electron-builder": "^24.13.3",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
